// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStatResource debouncing fetch requests should debounce requests when stat filter change 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{"filters":{"period":{"start_datetime":"2021-04-02T00:00:00.000Z","end_datetime":"2021-04-02T23:59:59.999Z"},"channels":["email"],"tags":[2]}}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 180000,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/stats/first-response-time/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`useStatResource should display error message on server response error 1`] = `
[
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
    },
    "type": "STAT/FETCH_STAT_STARTED",
  },
  {
    "message": {
      "status": "error",
      "title": "Failed to retrieve statistic. Please retry in a few seconds.",
    },
    "type": "notify mock",
  },
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
    },
    "type": "STAT/FETCH_STAT_ENDED",
  },
]
`;

exports[`useStatResource should fetch and save the stat 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{"filters":{"period":{"start_datetime":"2021-04-02T00:00:00.000Z","end_datetime":"2021-04-02T23:59:59.999Z"},"channels":["email"]}}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 180000,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/stats/first-response-time/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`useStatResource should fetch and save the stat 2`] = `
[
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
    },
    "type": "STAT/FETCH_STAT_STARTED",
  },
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
      "value": {
        "data": {
          "data": {
            "axes": {
              "x": [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": [],
            },
            "lines": [
              {
                "data": [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              {
                "data": [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": {
            "axes": {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
    "type": "STAT/STAT_FETCHED",
  },
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
    },
    "type": "STAT/FETCH_STAT_ENDED",
  },
]
`;

exports[`useStatResource should fetch the page with cursor when fetchPage is called 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{"filters":{"period":{"start_datetime":"2021-04-02T00:00:00.000Z","end_datetime":"2021-04-02T23:59:59.999Z"},"channels":["email"]},"cursor":"foo-cursor"}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 180000,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/stats/first-response-time/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`useStatResource should fetch the page with cursor when fetchPage is called 2`] = `
[
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
    },
    "type": "STAT/FETCH_STAT_STARTED",
  },
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
      "value": {
        "data": {
          "data": {
            "axes": {
              "x": [
                1558760400,
                1558846800,
                1558933200,
                1559019600,
                1559106000,
                1559192400,
                1559278800,
              ],
              "y": [],
            },
            "lines": [
              {
                "data": [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  44772,
                  0,
                ],
                "name": "50%",
              },
              {
                "data": [
                  0,
                  0,
                  0,
                  0,
                  1563,
                  80567,
                  0,
                ],
                "name": "90%",
              },
            ],
          },
          "label": "First response time (percentiles)",
          "legend": {
            "axes": {
              "x": "",
              "y": "First response time",
            },
          },
        },
        "meta": {
          "end_datetime": "2019-05-31T23:59:59-05:00",
          "previous_end_datetime": "2019-05-25T00:00:00-05:00",
          "previous_start_datetime": "2019-05-18T00:00:01-05:00",
          "start_datetime": "2019-05-25T00:00:00-05:00",
        },
      },
    },
    "type": "STAT/STAT_FETCHED",
  },
  {
    "payload": {
      "resourceName": "first-response-time",
      "statName": "stat",
    },
    "type": "STAT/FETCH_STAT_ENDED",
  },
]
`;
